--- a/servoo_shipping/i18n/fr.po
+++ b/servoo_shipping/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0-20220616\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-08 10:57+0000\n"
-"PO-Revision-Date: 2023-03-08 10:57+0000\n"
+"POT-Creation-Date: 2023-03-27 08:22+0000\n"
+"PO-Revision-Date: 2023-03-27 08:22+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -350,12 +350,12 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.constraint,message:servoo_shipping.constraint_servoo_shipping_pda_date_order_conditional_required
 msgid "A confirmed shipping PDA requires a confirmation date."
-msgstr ""
+msgstr "Un PDA confirmé nécessite une date de confirmation."
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__access_warning
 msgid "Access warning"
-msgstr ""
+msgstr "Avertissement d'accès"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__message_needaction
@@ -363,12 +363,12 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__message_needaction
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__message_needaction
 msgid "Action Needed"
-msgstr ""
+msgstr "Action nécessaire"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template__active
 msgid "Active"
-msgstr ""
+msgstr "Actif"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__activity_ids
@@ -376,7 +376,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__activity_ids
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__activity_ids
 msgid "Activities"
-msgstr ""
+msgstr "Activités"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__activity_exception_decoration
@@ -384,7 +384,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__activity_exception_decoration
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__activity_exception_decoration
 msgid "Activity Exception Decoration"
-msgstr ""
+msgstr "Décoration d'exception d'activité"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__activity_state
@@ -392,7 +392,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__activity_state
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__activity_state
 msgid "Activity State"
-msgstr ""
+msgstr "État d'activité"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__activity_type_icon
@@ -400,7 +400,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__activity_type_icon
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__activity_type_icon
 msgid "Activity Type Icon"
-msgstr ""
+msgstr "Icône du type d'activité"
 
 #. module: servoo_shipping
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.shipping_pda_template_view_form
@@ -433,7 +433,7 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_formality__agent_id
 msgid "Agent"
-msgstr ""
+msgstr "Agent"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_formality__amount
@@ -544,7 +544,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__cbm_vessel
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_template__cbm_vessel
 msgid "CBM Vessel"
-msgstr ""
+msgstr "CBM Navire"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__call_sign
@@ -554,12 +554,12 @@ msgstr "Signe d'appel"
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__campaign_id
 msgid "Campaign"
-msgstr ""
+msgstr "Campagne"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_line__product_updatable
 msgid "Can Edit Product"
-msgstr ""
+msgstr "Peut modifier le produit"
 
 #. module: servoo_shipping
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_file__state__cancel
@@ -632,7 +632,7 @@ msgstr "Classe"
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__partner_id
 msgid "Client"
-msgstr ""
+msgstr "Client"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_document_type__code
@@ -940,7 +940,7 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_bl__state__delivered
 msgid "Delivered"
-msgstr ""
+msgstr "Livré"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__partner_shipping_id
@@ -1084,7 +1084,7 @@ msgstr "Terminé"
 #: code:addons/servoo_shipping/models/shipping_pda.py:0
 #, python-format
 msgid "Down Payments"
-msgstr ""
+msgstr "Acomptes"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,help:servoo_shipping.field_servoo_shipping_pda_line__is_downpayment
@@ -1142,7 +1142,7 @@ msgstr "Taux de change"
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__expected_date
 msgid "Expected Date"
-msgstr ""
+msgstr "Date prévue"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_person__identity_document_expiry_date
@@ -1833,7 +1833,7 @@ msgstr "Poids net (kg)"
 #: code:addons/servoo_shipping/models/shipping_pda.py:0
 #, python-format
 msgid "New"
-msgstr ""
+msgstr "Nouveau"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_bl__activity_calendar_event_id
@@ -1870,7 +1870,7 @@ msgstr ""
 #. module: servoo_shipping
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_pda__payment_state__not_paid
 msgid "Not Paid"
-msgstr ""
+msgstr "Non payé"
 
 #. module: servoo_shipping
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_pda_line__display_type__line_note
@@ -1995,14 +1995,24 @@ msgid "Ordered Quantity: %(old_qty)s -> %(new_qty)s"
 msgstr ""
 
 #. module: servoo_shipping
+#: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__other_currency_id
+msgid "Other Currency"
+msgstr "Autre devise"
+
+#. module: servoo_shipping
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_form
 msgid "Other Info"
 msgstr "Autre information"
 
 #. module: servoo_shipping
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_form
+msgid "Other Total"
+msgstr "Montant total devise"
+
+#. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_formality__other_reference
 msgid "Other reference"
-msgstr ""
+msgstr "Autre référence"
 
 #. module: servoo_shipping
 #: model:ir.actions.act_window,name:servoo_shipping.action_shipping_pda
@@ -2107,12 +2117,12 @@ msgstr "Groupe d'emballage"
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_pda__payment_state__paid
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_form
 msgid "Paid"
-msgstr ""
+msgstr "Payé"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__paid_amount
 msgid "Paid Amount"
-msgstr ""
+msgstr "Montant payé"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__parent_id
@@ -2123,7 +2133,7 @@ msgstr ""
 #: model:ir.model.fields.selection,name:servoo_shipping.selection__servoo_shipping_pda__payment_state__partial
 #: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_form
 msgid "Partially Paid"
-msgstr ""
+msgstr "Payé partiellement"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_file__travel_description
@@ -2797,8 +2807,14 @@ msgstr "Tonnage des marchandises"
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__amount_total
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_line__price_total
+#: model_terms:ir.ui.view,arch_db:servoo_shipping.view_shipping_pda_tree
 msgid "Total"
 msgstr ""
+
+#. module: servoo_shipping
+#: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda__amount_other_currency
+msgid "Total Currency"
+msgstr "Total Devise"
 
 #. module: servoo_shipping
 #: model:ir.model.fields,field_description:servoo_shipping.field_servoo_shipping_pda_line__price_tax
