--- a/servoo_logistic/i18n/fr.po
+++ b/servoo_logistic/i18n/fr.po
@@ -433,6 +433,17 @@ msgid "If checked, some messages have a delivery error."
 msgstr ""
 
 #. module: servoo_logistic
+#: model:ir.model.fields,field_description:servoo_logistic.field_servoo_logistic_operation__invoice_state
+msgid "Invoice State"
+msgstr "Etat de facturation"
+
+#. module: servoo_logistic
+#: model:ir.model.fields.selection,name:servoo_logistic.selection__servoo_logistic_operation__invoice_state__invoiced
+#: model_terms:ir.ui.view,arch_db:servoo_logistic.view_servoo_logistic_form
+msgid "Invoiced"
+msgstr "Facturé"
+
+#. module: servoo_logistic
 #: model:ir.model.fields.selection,name:servoo_logistic.selection__servoo_logistic_operation__operation_type__import
 msgid "Import"
 msgstr ""
@@ -580,6 +591,11 @@ msgstr ""
 #: model:ir.model.fields,field_description:servoo_logistic.field_servoo_logistic_operation__activity_type_id
 msgid "Next Activity Type"
 msgstr ""
+
+#. module: servoo_logistic
+#: model:ir.model.fields.selection,name:servoo_logistic.selection__servoo_logistic_operation__invoice_state__not_invoiced
+msgid "Not Invoiced"
+msgstr "Non facturé"
 
 #. module: servoo_logistic
 #: model:ir.model.fields,field_description:servoo_logistic.field_servoo_logistic_operation__message_needaction_counter
